# gerrit-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
libgerrit/: Cargo.toml  call.rs  changes.rs  config.rs  entities.rs  error.rs  gerrit.rs  lib.rs
misc/: .ggr.conf  gen-sshkey.sh  testsetup.sh
misc/testsetup/masterproject-sources/: 0001-add-a-spoken-word-to-lorem.patch  0002-add-lorem-paragraph.patch  0003-remove-lorem-paragraph.patch  0004-change-some-lorem-paragraphs.patch  lorem-ipsum.txt
misc/testsetup/scripts/: check-running-service.sh.nohup  gen-sshkey.sh
src/gerritlib/: call.rs  changes.rs  entities.rs  error.rs  gerrit.rs  lib.rs
