[package]
name = "gerrit-rust"
version = "0.1.19"
authors = ["Silvio Fricke <silvio.fricke@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
keywords =  ["cli", "gerrit", "curl", "api"]
categories = ["api-bindings", "command-line-interface", "web-programming::http-client", "network-programming"]
repository = "https://github.com/silvio/gerrit-rust"
description = "Rust client to gerrit"

build = "build.rs"

[badges]
travis-ci = { repository = "silvio/gerrit-rust" }

[[bin]]
name = "gerrit-rust"
path = "src/bin/gerrit-rust.rs"
doctest = true

[dependencies]
chrono = "0.3"
clap = "2.22"
env_logger = "0.4"
git2 = "0.6"
gron = "0.3"
libgerrit = { path = "libgerrit", version = "0.2.3" }
log = "0.3"
regex = "0.2"
rustc-serialize = "0.3"
serde_json = "0.9"
toml-config = "0.4"
