[package]
name = "libgerrit"
version = "0.1.13"
authors = ["Silvio Fricke <silvio.fricke@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
keywords =  ["cli", "gerrit", "curl", "api"]
categories = ["api-bindings", "command-line-interface", "web-programming::http-client", "network-programming"]
repository = "https://github.com/silvio/gerrit-rust"
description = "Rust client to gerrit"

[lib]
name = "libgerrit"
path = "lib.rs"

[dependencies]
curl = ">= 0.4.4"
env_logger = "0.4"
git2 = "0.6"
gron = "0.2"
log = "0.3"
quick-error = "1.1"
regex = "0.2"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
url = "1.3"
