[package]
name = "libgerrit"
version = "0.2.4"
authors = ["Silvio Fricke <silvio.fricke@gmail.com>"]
license = "MPL-2.0"
readme = "../README.md"
keywords =  ["cli", "gerrit", "curl", "api"]
categories = ["api-bindings", "command-line-interface", "web-programming::http-client", "network-programming"]
repository = "https://github.com/silvio/gerrit-rust"
description = "Rust client to gerrit"

[badges]
travis-ci = { repository = "silvio/gerrit-rust" }

[lib]
name = "libgerrit"
path = "lib.rs"

[dependencies]
curl = ">= 0.4.4"
git2 = "0.6"
log = "0.3"
quick-error = "1.1"
semver = "0.6"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
url = "1.3"
