[package]
name = "libgerrit"
version = "0.2.5"
authors = ["Silvio Fricke <silvio.fricke@gmail.com>"]
license = "MPL-2.0"
readme = "../README.md"
keywords =  ["cli", "gerrit", "curl", "api"]
categories = ["api-bindings", "command-line-interface", "web-programming::http-client", "network-programming"]
repository = "https://github.com/silvio/gerrit-rust"
description = "Rust client to gerrit"

[badges]
travis-ci = { repository = "silvio/gerrit-rust" }

[lib]
name = "libgerrit"
path = "lib.rs"

[dependencies]
curl = ">= 0.4.4"
git2 = "0.6"
log = "0.3"
quick-error = "1.2"
semver = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.5"
